--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -5,3 +5,15 @@
 .navbar{
     margin-bottom: 4rem;
 }
+
+.all-posts-list, .image-edit ,.edit-button{
+    margin-top:1rem;
+    margin-bottom:1rem;
+
+}
+
+.all-posts-list-container{
+    margin: auto;
+    max-width: 70rem;
+}
+
